Todas las propuestas

--- a/index.html
+++ b/index.html
@@ -179,39 +179,40 @@
                             <h4 class="testi-text">25. Centro de tratamiento y rehabilitación de adicciones.</h4>
                         </div> 
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
-                            <h4 class="testi-text">Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
-                            <h4 class="testi-text">Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
-                            <h4 class="testi-text">Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
-                            <h4 class="testi-text">Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                            <h4 class="testi-text">25. Centro de tratamiento y rehabilitación de Adicciones.</h4>
+                            <h4 class="testi-text">26. Convenio UPrO para refacción y mantenimiento de todas las comisarias, centros de atención primaria de la salud y establecimientos educativos.</h4>
+                            <h4 class="testi-text">27. Creación de un centro de contención para mujeres en estado de vulnerabilidad.</h4>
+                            <h4 class="testi-text">28. Incorporación de deportes electrónicos como actividad recreativa y profesional.</h4>
+                            <h4 class="testi-text">29. Creacion del proyecto centro comercial Plaza San Martin.</h4>
+                            <h4 class="testi-text">30. Crearemos indicadores de gestión para medir el desempeño municipal.</h4>
                         </div> 
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
-                            <h4 class="testi-text">Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
-                            <h4 class="testi-text">Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
-                            <h4 class="testi-text">Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
-                            <h4 class="testi-text">Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                            <h4 class="testi-text">31. Rediseño de la infraestructura de la ciudad que mirando el futuro.</h4>
+                            <h4 class="testi-text">32. Puesta en valor de todas las plazas y espacios verdes.</h4>
+                            <h4 class="testi-text">33. Creación de 10 Plazas de la Salud.</h4>
+                            <h4 class="testi-text">34. Crearemos plazas con juegos adaptados y espacios sensitivos.</h4>
+                            <h4 class="testi-text">35. Mientras se realice la pavimentación elaboraremos un plan de compactación y mantenimiento de las calles de tierra.</h4>
                         </div> 
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
-                            <h4 class="testi-text">Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
-                            <h4 class="testi-text">Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
-                            <h4 class="testi-text">Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
-                            <h4 class="testi-text">Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                            <h4 class="testi-text">36. Erradicaremos los trabajos de bacheo permanente.</h4>
+                            <h4 class="testi-text">37. Fijaremos un cronograma de recolección de residuos.</h4>
+                            <h4 class="testi-text">38. Jerarquizar y potenciar los parques industriales.</h4>
+                            <h4 class="testi-text">39. Desarrollo de Plan de Economía Circular.</h4>
+                            <h4 class="testi-text">40. Principio de Respeto al Peatón.</h4>
                         </div> 
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
-                            <h4 class="testi-text">Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
-                            <h4 class="testi-text">Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
-                            <h4 class="testi-text">Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
-                            <h4 class="testi-text">Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                            <h4 class="testi-text">41. Creación del Programa de Vigilancia Ciudadana.</h4>
+                            <h4 class="testi-text">42. Diseñaremos corredores cardio protegidos en distintas áreas la ciudad.</h4>
+                            <h4 class="testi-text">43. Ampliación y puesta en valor de los centros comerciales.</h4>
+                            <h4 class="testi-text">44. Nuevo edificio municipal en zona Costanera Rio Quinto.</h4>
+                            <h4 class="testi-text">45. Construcción de 4 Centros de descentralización administrativa municipal.</h4>
                         </div> 
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
-                            <h4 class="testi-text">Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
-                            <h4 class="testi-text">Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
-                            <h4 class="testi-text">Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
-                            <h4 class="testi-text">Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                            <h4 class="testi-text">46. Jerarquización del Consejo Municipal de discapacidad, niñez, adolescencia y adultos mayores.</h4>
+                            <h4 class="testi-text">47. Plan de poda y mantenimiento de la arboleda de la ciudad.</h4>
+                            <h4 class="testi-text">48. Creación del Corredor Terminal – Calle Angosta – Parque Eva Perón.</h4>
+                            <h4 class="testi-text">49. Incorporación de las actividades del Parque La Pedrera a agenda municipal.</h4>
+                            <h4 class="testi-text">50. Hito homenaje al personal de la salud.</h4>
                         </div> 
                     </div> 
                 </div> 
