--- a/index.html
+++ b/index.html
@@ -417,6 +417,6 @@
             }
         });
     </script>
-    <a id="wspweb-icon" href="https://www.whatsapp.com"><img src="./img/icons/whatsapp.png" alt="whatsapp web" data-toggle="tooltip" data-placement="top" title="Escribeme todas tus inquietudes"></a>
+    <a id="wspweb-icon" href="https://wa.me/542657494181"><img src="./img/icons/whatsapp.png" alt="whatsapp web" data-toggle="tooltip" data-placement="top" title="Escribeme todas tus inquietudes"></a>
 </body>
 </html>
