--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
     <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+    <style>@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;500;600;700;900&display=swap');</style>
 
 </head>
 
@@ -38,7 +39,7 @@
     <nav id="header-navbar" class="navbar navbar-expand-lg py-4">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center text-white" href="/">
-                <h3 class="font-weight-bolder mb-0"><span id="joaquin">Joaquin</span><span id="surroca"> Surroca</span></h3>
+                <h3 class="font-weight-bolder mb-0"><span id="joaquin">JOAQUIN</span><span id="surroca"> SURROCA</span></h3>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav-header"
                 aria-controls="navbar-nav-header" aria-expanded="false" aria-label="Toggle navigation">
@@ -137,10 +138,9 @@
                         LO HICIMOS EN LA <strong>UPRO</strong>, LO HAREMOS EN LA <strong>CIUDAD</strong>
                     </h2>
                     <h4 class="section-sub-title">Algunas propuesta que mejoraran nuestra ciudad</h4>
-                    <h6>Opina o hacernos llegar tus propuestas en nuestras redes sociales</h6>
                 </div>
                 <!-- End of Section Title -->
-                <div class="row">
+                <div class="row" data-aos="fade-up">
                     <!-- Testimonial -->
                     <div class="testi-content testi-carousel owl-carousel">
                         <div class="testi-item text-center">
