atencion al vecino

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                     <li class="nav-item">
                         <a class="nav-link icons" href="https://twitter.com/jsurroca_ok" target="_blank"><img src="./icons/icono_twitter_gris.svg" alt="youtube"></a>
                     </li> 
+                    <li class="nav-item">
+                        <a class="nav-link icons" href="mailto:" target="_blank"><img src="./icons/icons8-envelope-48.png" alt="youtube"></a>
+                    </li>
                     <!--<li class="nav-item only-desktop">
                     <a class="nav-link" id="side-nav-open" href="#">
                         <span class="lnr lnr-menu"></span>
@@ -135,7 +138,7 @@
                 <!-- Section Title -->
                 <div class="title-wrap mb-5" data-aos="fade-up">
                     <h2 class="section-title">
-                        LO HICIMOS EN LA <strong>UPRO</strong>, LO HAREMOS EN LA <strong>CIUDAD</strong>
+                        LO HICIMOS EN LA <strong>UPRO</strong>, LO HAREMOS EN LA <strong>VILLA MERCEDES</strong>
                     </h2>
                     <h4 class="section-sub-title">Algunas propuesta que mejoraran nuestra ciudad</h4>
                 </div>
@@ -144,75 +147,75 @@
                     <!-- Testimonial -->
                     <div class="testi-content testi-carousel owl-carousel">
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">1. Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
-                            <h4 class="testi-text">2. Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
-                            <h4 class="testi-text">3. Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
-                            <h4 class="testi-text">4. Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
-                            <h4 class="testi-text">5. Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                            <h4 class="testi-text"><strong>1.</strong> Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
+                            <h4 class="testi-text"><strong>2.</strong> Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
+                            <h4 class="testi-text"><strong>3.</strong> Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
+                            <h4 class="testi-text"><strong>4.</strong> Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
+                            <h4 class="testi-text"><strong>5.</strong> Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
                         </div>
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">6. Promoción de políticas para la captación de médicos para el sector público de salud.</h4>
-                            <h4 class="testi-text">7. Plan de infraestructura deportiva para clubes.</h4>
-                            <h4 class="testi-text">8. Centro de monitoreo municipal con un sistema de cámaras de videovigilancia.</h4>
-                            <h4 class="testi-text">9. Creación de la Universidad del Deporte.</h4>
-                            <h4 class="testi-text">10. Creación de 6 SUM (Salón de Usos Múltiples) barriales orientados al deporte, la educación y la cultura.</h4>  
+                            <h4 class="testi-text"><strong>6.</strong> Promoción de políticas para la captación de médicos para el sector público de salud.</h4>
+                            <h4 class="testi-text"><strong>7.</strong> Plan de infraestructura deportiva para clubes.</h4>
+                            <h4 class="testi-text"><strong>8.</strong> Centro de monitoreo municipal con un sistema de cámaras de videovigilancia.</h4>
+                            <h4 class="testi-text"><strong>9.</strong> Creación de la Universidad del Deporte.</h4>
+                            <h4 class="testi-text"><strong>10.</strong> Creación de 6 SUM (Salón de Usos Múltiples) barriales orientados al deporte, la educación y la cultura.</h4>  
                         </div>
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">11. Wifi de alta velocidad, libre y gratuito en plazas y parques.</h4>
-                            <h4 class="testi-text">12. Las nuevas obras en la ciudad serán consensuadas con los vecinos a través de audiencias públicas.</h4>
-                            <h4 class="testi-text">13. Creación de espacios de participación y propuesta de un acuerdo programático con los distintos sectores políticos de la ciudad.</h4>
-                            <h4 class="testi-text">14. Normalización de todos los servicios municipales en 90 días.</h4>
-                            <h4 class="testi-text">15. Creación de un Polo de Emprendedores.</h4>  
+                            <h4 class="testi-text"><strong>11.</strong> Wifi de alta velocidad, libre y gratuito en plazas y parques.</h4>
+                            <h4 class="testi-text"><strong>12.</strong> Las nuevas obras en la ciudad serán consensuadas con los vecinos a través de audiencias públicas.</h4>
+                            <h4 class="testi-text"><strong>13.</strong> Creación de espacios de participación y propuesta de un acuerdo programático con los distintos sectores políticos de la ciudad.</h4>
+                            <h4 class="testi-text"><strong>14.</strong> Normalización de todos los servicios municipales en 90 días.</h4>
+                            <h4 class="testi-text"><strong>15.</strong> Creación de un Polo de Emprendedores.</h4>  
                         </div> 
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">16. Creación del Hospital de Salud Animal.</h4>
-                            <h4 class="testi-text">17. Elaboración del Plan Estratégico Participativo Villa Mercedes 2023-2031.</h4>
-                            <h4 class="testi-text">18. Jerarquización de los empleados municipales como recursos estratégicos en el equipo de gestión.</h4>
-                            <h4 class="testi-text">19. Creación de una App Ciudadano Digital con monitoreo en línea para el transporte de pasajeros y estacionamiento inteligente.</h4>
-                            <h4 class="testi-text">20. Centro comercial, cultural, gastronómico y turístico Calle Angosta.</h4> 
+                            <h4 class="testi-text"><strong>16.</strong> Creación del Hospital de Salud Animal.</h4>
+                            <h4 class="testi-text"><strong>17.</strong> Elaboración del Plan Estratégico Participativo Villa Mercedes 2023-2031.</h4>
+                            <h4 class="testi-text"><strong>18.</strong> Jerarquización de los empleados municipales como recursos estratégicos en el equipo de gestión.</h4>
+                            <h4 class="testi-text"><strong>19.</strong> Creación de una App Ciudadano Digital con monitoreo en línea para el transporte de pasajeros y estacionamiento inteligente.</h4>
+                            <h4 class="testi-text"><strong>20.</strong> Centro comercial, cultural, gastronómico y turístico Calle Angosta.</h4> 
                         </div> 
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">21. Tele gestión de alumbrado público y conversión a tecnología LED.</h4>
-                            <h4 class="testi-text">22. Creación de planes de mantenimiento correctivo, preventivo y predictivo de todos los servicios municipales.</h4>
-                            <h4 class="testi-text">23. Creación de un centro de capacitación municipal.</h4>
-                            <h4 class="testi-text">24. Creación de circuitos exclusivos para runners.</h4>
-                            <h4 class="testi-text">25. Centro de tratamiento y rehabilitación de adicciones.</h4>
+                            <h4 class="testi-text"><strong>21.</strong> Tele gestión de alumbrado público y conversión a tecnología LED.</h4>
+                            <h4 class="testi-text"><strong>22.</strong> Creación de planes de mantenimiento correctivo, preventivo y predictivo de todos los servicios municipales.</h4>
+                            <h4 class="testi-text"><strong>23.</strong> Creación de un centro de capacitación municipal.</h4>
+                            <h4 class="testi-text"><strong>24.</strong> Creación de circuitos exclusivos para runners.</h4>
+                            <h4 class="testi-text"><strong>25.</strong> Centro de tratamiento y rehabilitación de adicciones.</h4>
                         </div> 
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">25. Centro de tratamiento y rehabilitación de Adicciones.</h4>
-                            <h4 class="testi-text">26. Convenio UPrO para refacción y mantenimiento de todas las comisarias, centros de atención primaria de la salud y establecimientos educativos.</h4>
-                            <h4 class="testi-text">27. Creación de un centro de contención para mujeres en estado de vulnerabilidad.</h4>
-                            <h4 class="testi-text">28. Incorporación de deportes electrónicos como actividad recreativa y profesional.</h4>
-                            <h4 class="testi-text">29. Creacion del proyecto centro comercial Plaza San Martin.</h4>
-                            <h4 class="testi-text">30. Crearemos indicadores de gestión para medir el desempeño municipal.</h4>
+                            <h4 class="testi-text"><strong>25.</strong> Centro de tratamiento y rehabilitación de Adicciones.</h4>
+                            <h4 class="testi-text"><strong>26.</strong> Convenio UPrO para refacción y mantenimiento de todas las comisarias, centros de atención primaria de la salud y establecimientos educativos.</h4>
+                            <h4 class="testi-text"><strong>27.</strong> Creación de un centro de contención para mujeres en estado de vulnerabilidad.</h4>
+                            <h4 class="testi-text"><strong>28.</strong> Incorporación de deportes electrónicos como actividad recreativa y profesional.</h4>
+                            <h4 class="testi-text"><strong>29.</strong> Creacion del proyecto centro comercial Plaza San Martin.</h4>
+                            <h4 class="testi-text"><strong>30.</strong> Crearemos indicadores de gestión para medir el desempeño municipal.</h4>
                         </div> 
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">31. Rediseño de la infraestructura de la ciudad que mirando el futuro.</h4>
-                            <h4 class="testi-text">32. Puesta en valor de todas las plazas y espacios verdes.</h4>
-                            <h4 class="testi-text">33. Creación de 10 Plazas de la Salud.</h4>
-                            <h4 class="testi-text">34. Crearemos plazas con juegos adaptados y espacios sensitivos.</h4>
-                            <h4 class="testi-text">35. Mientras se realice la pavimentación elaboraremos un plan de compactación y mantenimiento de las calles de tierra.</h4>
+                            <h4 class="testi-text"><strong>31.</strong> Rediseño de la infraestructura de la ciudad que mirando el futuro.</h4>
+                            <h4 class="testi-text"><strong>32.</strong> Puesta en valor de todas las plazas y espacios verdes.</h4>
+                            <h4 class="testi-text"><strong>33.</strong> Creación de 10 Plazas de la Salud.</h4>
+                            <h4 class="testi-text"><strong>34.</strong> Crearemos plazas con juegos adaptados y espacios sensitivos.</h4>
+                            <h4 class="testi-text"><strong>35.</strong> Mientras se realice la pavimentación elaboraremos un plan de compactación y mantenimiento de las calles de tierra.</h4>
                         </div> 
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">36. Erradicaremos los trabajos de bacheo permanente.</h4>
-                            <h4 class="testi-text">37. Fijaremos un cronograma de recolección de residuos.</h4>
-                            <h4 class="testi-text">38. Jerarquizar y potenciar los parques industriales.</h4>
-                            <h4 class="testi-text">39. Desarrollo de Plan de Economía Circular.</h4>
-                            <h4 class="testi-text">40. Principio de Respeto al Peatón.</h4>
+                            <h4 class="testi-text"><strong>36.</strong> Erradicaremos los trabajos de bacheo permanente.</h4>
+                            <h4 class="testi-text"><strong>37.</strong> Fijaremos un cronograma de recolección de residuos.</h4>
+                            <h4 class="testi-text"><strong>38.</strong> Jerarquizar y potenciar los parques industriales.</h4>
+                            <h4 class="testi-text"><strong>39.</strong> Desarrollo de Plan de Economía Circular.</h4>
+                            <h4 class="testi-text"><strong>40.</strong> Principio de Respeto al Peatón.</h4>
                         </div> 
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">41. Creación del Programa de Vigilancia Ciudadana.</h4>
-                            <h4 class="testi-text">42. Diseñaremos corredores cardio protegidos en distintas áreas la ciudad.</h4>
-                            <h4 class="testi-text">43. Ampliación y puesta en valor de los centros comerciales.</h4>
-                            <h4 class="testi-text">44. Nuevo edificio municipal en zona Costanera Rio Quinto.</h4>
-                            <h4 class="testi-text">45. Construcción de 4 Centros de descentralización administrativa municipal.</h4>
+                            <h4 class="testi-text"><strong>41.</strong> Creación del Programa de Vigilancia Ciudadana.</h4>
+                            <h4 class="testi-text"><strong>42.</strong> Diseñaremos corredores cardio protegidos en distintas áreas la ciudad.</h4>
+                            <h4 class="testi-text"><strong>43.</strong> Ampliación y puesta en valor de los centros comerciales.</h4>
+                            <h4 class="testi-text"><strong>44.</strong> Nuevo edificio municipal en zona Costanera Rio Quinto.</h4>
+                            <h4 class="testi-text"><strong>45.</strong> Construcción de 4 Centros de descentralización administrativa municipal.</h4>
                         </div> 
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">46. Jerarquización del Consejo Municipal de discapacidad, niñez, adolescencia y adultos mayores.</h4>
-                            <h4 class="testi-text">47. Plan de poda y mantenimiento de la arboleda de la ciudad.</h4>
-                            <h4 class="testi-text">48. Creación del Corredor Terminal – Calle Angosta – Parque Eva Perón.</h4>
-                            <h4 class="testi-text">49. Incorporación de las actividades del Parque La Pedrera a agenda municipal.</h4>
-                            <h4 class="testi-text">50. Hito homenaje al personal de la salud.</h4>
+                            <h4 class="testi-text"><strong>46.</strong> Jerarquización del Consejo Municipal de discapacidad, niñez, adolescencia y adultos mayores.</h4>
+                            <h4 class="testi-text"><strong>47.</strong> Plan de poda y mantenimiento de la arboleda de la ciudad.</h4>
+                            <h4 class="testi-text"><strong>48.</strong> Creación del Corredor Terminal – Calle Angosta – Parque Eva Perón.</h4>
+                            <h4 class="testi-text"><strong>49.</strong> Incorporación de las actividades del Parque La Pedrera a agenda municipal.</h4>
+                            <h4 class="testi-text"><strong>50.</strong> Hito homenaje al personal de la salud.</h4>
                         </div> 
                     </div> 
                 </div> 
@@ -417,6 +420,7 @@
             }
         });
     </script>
+    <a id="contanos-icon" href="https://docs.google.com/forms/d/e/1FAIpQLSf44huI67FWir4KJOUcWrDi2fGklPoD2Q3pGDoaqrPWoVYYGw/viewform" target="_blank"><img src="./icons/Botón para formulario.png" alt="contanos" data-toggle="tooltip" data-placement="top" title="Atención al vecino"></a>
     <a id="wspweb-icon" href="https://wa.me/542657494181" target="_blank"><img src="./img/icons/whatsapp.png" alt="whatsapp web" data-toggle="tooltip" data-placement="top" title="Escribeme todas tus inquietudes"></a>
 </body>
 </html>
