--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <meta https-equiv="X-UA-Compatible" content="IE=edge">
     <title>JS 2023</title>
-    <meta name="description" content="Roxy">
+    <meta name="description" content="Joaquin Surroca - Intendente 2023">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- External CSS -->
@@ -30,8 +30,8 @@
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
-    <style>@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;500;600;700;900&display=swap');</style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script> 
+    <style>@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;500;600;700;900&family=Titillium+Web:wght@200;300;400;600;700&display=swap');</style>
 
 </head>
 
@@ -231,9 +231,9 @@
                         <div class="row align-items-center text-white">
 
                             <div class="col-md-4 offset-md-2 col-sm-6" data-aos="fade-right">
-                                <h4 class="mb-4">Joaquín Surroca</h4>
-                                <p id="js-bio">Líder visionario y emprendedor con un historial comprobado de éxito en su carrera académica como rector de la Universidad Provincial de Oficios (UPRO). <br>
-                                    Con una sólida formación en educación y gestión, Surroca ha dedicado su vida a mejorar la calidad de vida de la comunidad a través de la educación y la capacitación de los jóvenes y adultos en la provincia de San Luis.<br>
+                                <h4 class="mb-4" id="JS">Joaquín Surroca</h4>
+                                <p id="js-bio">Líder, visionario y emprendedor con un historial comprobado de éxito en su carrera académica como rector de la Universidad Provincial de Oficios (UPRO). <br><br>
+                                    Con una sólida formación en educación y gestión, Surroca ha dedicado su vida a mejorar la calidad de vida de la comunidad a través de la educación y la capacitación de los jóvenes y adultos en la provincia de San Luis.<br><br>
                                     Como candidato a intendente de la ciudad de Villa Mercedes, Surroca promete llevar su visión y experiencia al servicio público para abordar los desafíos clave que enfrenta la ciudad, como la creación de empleo, la mejora de la infraestructura y el fomento de la educación y el desarrollo económico local. <br> 
                                     Con una visión clara y compromiso para servir a su comunidad, Surroca busca hacer una diferencia real en la vida de los habitantes de Villa Mercedes y convertirse en un líder transformador en la región.</p> 
                             </div><!--/ .col-md-4.col-md-offset-2.col-sm-6 -->
@@ -420,7 +420,9 @@
             }
         });
     </script>
-    <a id="contanos-icon" href="https://docs.google.com/forms/d/e/1FAIpQLSf44huI67FWir4KJOUcWrDi2fGklPoD2Q3pGDoaqrPWoVYYGw/viewform" target="_blank"><img src="./icons/Botón para formulario.png" alt="contanos" data-toggle="tooltip" data-placement="top" title="Atención al vecino"></a>
-    <a id="wspweb-icon" href="https://wa.me/542657494181" target="_blank"><img src="./img/icons/whatsapp.png" alt="whatsapp web" data-toggle="tooltip" data-placement="top" title="Escribeme todas tus inquietudes"></a>
+    <div id="floaticons">
+        <a id="contanos-icon" href="https://docs.google.com/forms/d/e/1FAIpQLSf44huI67FWir4KJOUcWrDi2fGklPoD2Q3pGDoaqrPWoVYYGw/viewform" target="_blank"><img src="./icons/Botón para formulario.png" alt="contanos" data-toggle="tooltip" data-placement="top" title="Atención al vecino"></a>
+        <a id="wspweb-icon" href="https://wa.me/542657494181" target="_blank"><img src="./img/icons/whatsapp.png" alt="whatsapp web" data-toggle="tooltip" data-placement="top" title="Escribeme todas tus inquietudes"></a>
+    </div>
 </body>
 </html>
