--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         });
     </script>
     <div id="floaticons">
-        <a id="contanos-icon" href="https://docs.google.com/forms/d/e/1FAIpQLSf44huI67FWir4KJOUcWrDi2fGklPoD2Q3pGDoaqrPWoVYYGw/viewform" target="_blank"><img src="./icons/Botón para formulario.png" alt="contanos" data-toggle="tooltip" data-placement="top" title="Atención al vecino"></a>
+        <a id="contanos-icon" href="https://docs.google.com/forms/d/e/1FAIpQLSf44huI67FWir4KJOUcWrDi2fGklPoD2Q3pGDoaqrPWoVYYGw/viewform" target="_blank"><img src="./icons/Botón para formulario.png" alt="contanos" data-toggle="tooltip" data-placement="top" title="Atención al vecino" style="width: 65px;"></a>
         <a id="wspweb-icon" href="https://wa.me/542657494181" target="_blank"><img src="./img/icons/whatsapp.png" alt="whatsapp web" data-toggle="tooltip" data-placement="top" title="Escribeme todas tus inquietudes"></a>
     </div>
 </body>
