--- a/index.html
+++ b/index.html
@@ -144,14 +144,47 @@
                 </div>
                 <!-- End of Section Title -->
                 <div class="row" data-aos="fade-up">
+                    <section id="projects" class="content"> 
+                        
+                    </section>
                     <!-- Testimonial -->
                     <div class="testi-content testi-carousel owl-carousel">
                         <div class="testi-item text-center">
-                            <h4 class="testi-text"><strong>1.</strong> Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
-                            <h4 class="testi-text"><strong>2.</strong> Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
-                            <h4 class="testi-text"><strong>3.</strong> Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
-                            <h4 class="testi-text"><strong>4.</strong> Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
-                            <h4 class="testi-text"><strong>5.</strong> Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                            <article id="cards-container">
+                                <section class="card">
+                                    <img class="card-background" src="./img/Propuesta 8.jpg" alt="">
+                                    <h3><a href="${pageLink}" class="card-link" target="_blank">1</a></h3>
+                                    <p>Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</p>
+                                </section>
+                            </article>
+                            <article id="cards-container">
+                                <section class="card">
+                                    <img class="card-background" src="./img/Propuesta 8.jpg" alt="">
+                                    <h3><a href="${pageLink}" class="card-link" target="_blank">2</a></h3>
+                                    <p>Pavimentación, agua y cloacas del 100% de la ciudad.</p>
+                                </section>
+                            </article> 
+                            <article id="cards-container">
+                                <section class="card">
+                                    <img class="card-background" src="./img/Propuesta 8.jpg" alt="">
+                                    <h3><a href="${pageLink}" class="card-link" target="_blank">3</a></h3>
+                                    <p>Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</p>
+                                </section>
+                            </article> 
+                            <article id="cards-container">
+                                <section class="card">
+                                    <img class="card-background" src="./img/Propuesta 8.jpg" alt="">
+                                    <h3><a href="${pageLink}" class="card-link" target="_blank">4</a></h3>
+                                    <p>Construcción de Planta de Tratamiento de Residuos Urbanos.</p>
+                                </section>
+                            </article> 
+                            <article id="cards-container">
+                                <section class="card">
+                                    <img class="card-background" src="./img/Propuesta 8.jpg" alt="">
+                                    <h3><a href="${pageLink}" class="card-link" target="_blank">5</a></h3>
+                                    <p>Garantía de servicios de calidad en seguridad, salud y educación.</p>
+                                </section>
+                            </article> 
                         </div>
                         <div class="testi-item text-center">
                             <h4 class="testi-text"><strong>6.</strong> Promoción de políticas para la captación de médicos para el sector público de salud.</h4>
